--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
 
     "version": "1.1.0",
 
-    "description": "A chrome extension using HTML, CSS and JavaScript to fetch the Github Repo Stats.",
+    "description": "A dynamic Chrome Extension to fetch the Github Repo Stats.",
 
     "action":{
         "default_popup": "index.html",
